wip: start fetch api and display movies

--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,30 @@
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+  <header>
+    <div id="top_header">
+      <div id="logo">
+        <img src="" alt="" />
+      </div>
+      <nav>
+        <ul>
+          <li class="navbar"><a href="index.html">Accueil</a></li>
+          <li class="navbar"><a href="">Catégories</a></li>
+        </ul>
+      </nav>
+    </div>
+    <section id="firstMovie_section">
+      <!-- Dynamic data insertion -->
+      <img id="firstMovie_img" />
+      <h1></h1>
+      <button type="button" class="" aria-label=""><i class="fas fa-info"></i>More Info</button>
+      <p id="firstMovie_summary"></p>
+    </section>
+  </header>
+  <main>
+    <!-- Dynamic insertion of categories -->
+  </main>
+  <script src="https://kit.fontawesome.com/1f7aaf7cdc.js" crossorigin="anonymous"></script>
   <script src="js/homepage.js"></script>
 </body>
 </html>
